WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125965
MessageReceiverMap::addMessageReceiver should assert that destinationID is not zero
https://bugs.webkit.org/show_bug.cgi?id=125965
Summary
MessageReceiverMap::addMessageReceiver should assert that destinationID is no...
Anders Carlsson
Reported
2013-12-18 17:29:23 PST
MessageReceiverMap::addMessageReceiver should assert that destinationID is not zero
Attachments
Patch
(1.54 KB, patch)
2013-12-18 17:31 PST
,
Anders Carlsson
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-12-18 17:31:57 PST
Created
attachment 219594
[details]
Patch
Anders Carlsson
Comment 2
2013-12-18 17:36:10 PST
Committed
r160813
: <
http://trac.webkit.org/changeset/160813
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug