MessageReceiverMap::addMessageReceiver should assert that destinationID is not zero https://bugs.webkit.org/show_bug.cgi?id=125965

Reviewed by Tim Horton.

* Platform/CoreIPC/MessageReceiverMap.cpp:
(CoreIPC::MessageReceiverMap::addMessageReceiver):

Canonical link: https://commits.webkit.org/143959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160813 268f45cc-cd09-0410-ab3c-d52691b4dbfc